--- a/assets/css/shared/_status.scss
+++ b/assets/css/shared/_status.scss
@@ -51,7 +51,7 @@
     color: #aa0114;
   }
 
-  &.status-icon-issues::before{
+  &.status-icon-issue::before{
     content: "\f071";
     color: #cc8100;
   }
@@ -76,7 +76,7 @@
     color: #136207;
   }
 
-  &.status-name-issues{
+  &.status-name-issue{
     color: #cc8100;
   }
 
