--- a/templates/dashboard/incident/add.html.twig
+++ b/templates/dashboard/incident/add.html.twig
@@ -25,7 +25,7 @@
           {{ form_start(form) }}
           {{ form_row(form.name) }}
           {{ form_row(form.message) }}
-          {{ form_row(form.visibility) }}
+          <!--{{ form_row(form.visibility) }}-->
           {{ form_row(form.occurred) }}
           {{ form_row(form.anticipatedResolution) }}
           {{ form_row(form.status) }}
