--- a/templates/dashboard/maintenance/add.html.twig
+++ b/templates/dashboard/maintenance/add.html.twig
@@ -25,7 +25,7 @@
           {{ form_start(form) }}
           {{ form_row(form.name) }}
           {{ form_row(form.purpose) }}
-          {{ form_row(form.visibility) }}
+          <!--{{ form_row(form.visibility) }}-->
           {{ form_row(form.scheduledFor) }}
           {{ form_row(form.anticipatedEnd) }}
           {{ form_row(form.status) }}
