--- a/templates/dashboard/maintenance/edit.html.twig
+++ b/templates/dashboard/maintenance/edit.html.twig
@@ -38,7 +38,7 @@
               {% endfor %}
             </div>
           </fieldset>
-          {{ form_row(form.visibility) }}
+          <!--{{ form_row(form.visibility) }}-->
           {{ form_row(form.scheduledFor) }}
           {{ form_row(form.anticipatedEnd) }}
           {{ form_row(form.status) }}
