--- a/templates/mail/serviceupdated.html.twig
+++ b/templates/mail/serviceupdated.html.twig
@@ -7,7 +7,7 @@
   <tr>
     <td>
       <a href="#" title="">
-        <img src="https://codeclouds.net/wireless-banner.png" height="229" width="600" style="display: block; padding: 0px; text-align: center; height: 229px; width: 600px; border: 0px;">
+        <img src="{{ config.siteUrl }}/static/images/wireless-banner.png" height="229" width="600" style="display: block; padding: 0px; text-align: center; height: 229px; width: 600px; border: 0px;">
       </a>
     </td>
   </tr>
@@ -28,7 +28,7 @@
       <table align="center" cellspacing="0" cellpadding="0" style="padding:0;vertical-align:top;width:auto;">
         <tr style="padding:0;text-align:left;vertical-align:top">
           <td style="-moz-hyphens:auto;-webkit-hyphens:auto;Margin:0;background:#6441A4;border:2px solid #6441A4;border-collapse:collapse!important;color:#fff;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;hyphens:auto;line-height:1.3;margin:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word">
-            <a href="http://localhost" style="Margin:0;border:0 solid #6441A4;border-radius:3px;color:#fff;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:regular;line-height:1.3;margin:0;padding:10px 55px 10px 55px;text-align:left;text-decoration:none">
+            <a href="{{ config.siteUrl }}" style="Margin:0;border:0 solid #6441A4;border-radius:3px;color:#fff;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:regular;line-height:1.3;margin:0;padding:10px 55px 10px 55px;text-align:left;text-decoration:none">
               View
             </a>
           </td>
