--- a/templates/mail/incidentupdated.html.twig
+++ b/templates/mail/incidentupdated.html.twig
@@ -7,7 +7,7 @@
   <tr>
     <td>
       <a href="#" title="">
-        <img src="https://codeclouds.net/wireless-banner.png" height="229" width="600" style="display: block; padding: 0px; text-align: center; height: 229px; width: 600px; border: 0px;">
+        <img src="{{ config.siteUrl }}/static/images/wireless-banner.png" height="229" width="600" style="display: block; padding: 0px; text-align: center; height: 229px; width: 600px; border: 0px;">
       </a>
     </td>
   </tr>
@@ -17,7 +17,7 @@
   <tr>
     <td>
       <h2 style="color: #444444; font-family: Helvetica, Arial, sans-serif; font-size: 24px; font-weight: 400; line-height: 1.3; margin: 0px 0px 10px; padding: 0px; overflow-wrap: normal; text-align: center;">
-        Incident - {{ incident.name }} - reported</h2>
+        Incident - {{ incident.name }} - updated</h2>
     </td>
   </tr>
 </table>
@@ -26,11 +26,23 @@
   <tr>
     <td style="padding: 0px 20px 5px 20px;">
       <b>Status:</b> {{ incident.status.name }}<br>
-      <b>Occurred:</b> {{ incident.occurred|date("m/d/Y g:ia", config.siteTimezone) }}<br>
-      <b>Anticipated Resolution:</b> {{ incident.anticipatedResolution|date("m/d/Y g:ia", config.siteTimezone) }}<br>
+      <b>Occurred:</b> {{ incident.occurred|date("m/d/Y g:ia T", config.siteTimezone) }}<br>
+      <b>Anticipated Resolution:</b> {{ incident.anticipatedResolution|date("m/d/Y g:ia T", config.siteTimezone) }}<br>
       <b>Type:</b> {{ incident.type.name }}<br>
       <b>Services Affected:</b> {{ incident.servicesString }}<br><br>
-      {{ incident.message }}
+      {{ incident.message }}<br><br>
+
+      {% if incident.updates is empty %}
+        <b>Updates:</b> N/A
+      {% else %}
+        <b>Updates:</b>
+      {% endif %}
+
+      {% for update in incident.updates %}
+        {{ update.created|date("m/d/Y g:ia T", config.siteTimezone) }}<br>
+        {{ update.message }}<br><br>
+      {% endfor %}
+
     </td>
   </tr>
 </table>
@@ -41,7 +53,7 @@
       <table align="center" cellspacing="0" cellpadding="0" style="padding:0;vertical-align:top;width:auto;">
         <tr style="padding:0;text-align:left;vertical-align:top">
           <td style="-moz-hyphens:auto;-webkit-hyphens:auto;Margin:0;background:#6441A4;border:2px solid #6441A4;border-collapse:collapse!important;color:#fff;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;hyphens:auto;line-height:1.3;margin:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word">
-            <a href="http://localhost" style="Margin:0;border:0 solid #6441A4;border-radius:3px;color:#fff;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:regular;line-height:1.3;margin:0;padding:10px 55px 10px 55px;text-align:left;text-decoration:none">
+            <a href="{{ config.siteUrl }}/incident/{{ incident.hashId }}" style="Margin:0;border:0 solid #6441A4;border-radius:3px;color:#fff;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:regular;line-height:1.3;margin:0;padding:10px 55px 10px 55px;text-align:left;text-decoration:none">
               View
             </a>
           </td>
