--- a/templates/mail/subscriptioncreated.html.twig
+++ b/templates/mail/subscriptioncreated.html.twig
@@ -7,7 +7,7 @@
   <tr>
     <td>
       <a href="#" title="">
-        <img src="https://codeclouds.net/wireless-banner.png" height="229" width="600" style="display: block; padding: 0px; text-align: center; height: 229px; width: 600px; border: 0px;">
+        <img src="{{ config.siteUrl }}/static/images/wireless-banner.png" height="229" width="600" style="display: block; padding: 0px; text-align: center; height: 229px; width: 600px; border: 0px;">
       </a>
     </td>
   </tr>
@@ -17,7 +17,7 @@
   <tr>
     <td>
       <h2 style="color: #444444; font-family: Helvetica, Arial, sans-serif; font-size: 24px; font-weight: 400; line-height: 1.3; margin: 0px 0px 10px; padding: 0px; overflow-wrap: normal; text-align: center;">
-        Your subscribed to updates!</h2>
+        Your subscribed for updates!</h2>
     </td>
   </tr>
 </table>
