--- a/templates/app/appbase.html.twig
+++ b/templates/app/appbase.html.twig
@@ -33,10 +33,10 @@
       <div class="app-footer">
         <div class="app-footer-inner">
           <div class="app-footer-left">
-            <a href="https://github.com/dman25560/signal/issues">Report Issue</a>
+            <a href="https://github.com/dustinscarberry/signal/issues">Report Issue</a>
           </div>
           <div class="app-footer-right">
-            <a href="https://github.com/dman25560/signal">Powered By Signal</a>
+            <a href="https://github.com/dustinscarberry/signal">Powered By Signal</a>
           </div>
         </div>
       </div>
