--- a/assets/css/dashboard/_layout.scss
+++ b/assets/css/dashboard/_layout.scss
@@ -4,6 +4,7 @@ body.dashboard-login{
   background: linear-gradient(90deg, #42275a 0%, #734b6d 65%);
   display: table;
   width: 100%;
+  padding: 0 2.5rem;
 }
 
 //page wrapper
