--- a/templates/dashboard/login/login.html.twig
+++ b/templates/dashboard/login/login.html.twig
@@ -25,7 +25,7 @@
         <button type="submit" class="btn btn-primary btn-large">Login</button>
 
         {% if config.enableSaml2Login %}
-          <a href="/dashboard/samllogin">SSO Login</a>
+          <a class="samllogin-link" href="/dashboard/samllogin">SSO Login</a>
         {% endif %}
 
       </form>
