--- a/assets/css/dashboard/_components.scss
+++ b/assets/css/dashboard/_components.scss
@@ -127,6 +127,11 @@
     color: #333;
     font-size: 2.3rem;
   }
+
+  .samllogin-link{
+    display: block;
+    margin-top: 4rem;
+  }
 }
 
 //widget selector
