--- a/templates/dashboard/_header.html.twig
+++ b/templates/dashboard/_header.html.twig
@@ -9,7 +9,7 @@
     <div class="profile-menu">
       <h4>{{ app.user.fullName }}</h4>
       <a href="/dashboard/account">Account</a>
-      <a href="/dashboard/faq">Help</a>
+      <a href="https://github.com/dustinscarberry/signal">Help</a>
       <a href="/dashboard/about">About</a>
       <span class="separator"></span>
       <a href="/dashboard/logout">Sign Out</a>
@@ -17,8 +17,8 @@
   </div>
   <div class="dashboard-quicklinks">
     <a class="quicklink fas fa-desktop" href="/"></a>
-    <a class="quicklink fas fa-question" href="/help"></a>
-    <a class="quicklink fas fa-info-circle" href="/about"></a>
+    <a class="quicklink fas fa-question" href="https://github.com/dustinscarberry/signal"></a>
+    <a class="quicklink fas fa-info-circle" href="/dashboard/about"></a>
     <span class="separator"></span>
   </div>
 </div>
