--- a/templates/dashboard/account/view.html.twig
+++ b/templates/dashboard/account/view.html.twig
@@ -21,8 +21,8 @@
         <div class="dashboard-panel-block">
           {{ form_start(form) }}
           {{ form_widget(form) }}
-          <button class="btn btn-primary" type="submit">Save Changes</button>
-          <button class="btn btn-primary" type="submit">Regenerate API Token</button>
+          <button class="btn btn-primary" type="submit" name="updateUser" value="updateUser">Save Changes</button>
+          <button class="btn btn-primary" type="submit" name="regenerateApiToken" value="regenerateApiToken">Regenerate API Token</button>
           {{ form_end(form) }}
         </div>
       </div>
