--- a/templates/dashboard/maintenancestatus/viewall.html.twig
+++ b/templates/dashboard/maintenancestatus/viewall.html.twig
@@ -31,14 +31,14 @@
             <tr data-id="{{ status.hashId }}">
               <td>{{ status.name }}</td>
               <td>
-                <button class="btn btn-error pull-right btn-delete">Delete</button>
+                <button class="btn btn-error pull-right btn-delete" {% if not status.deletable %}disabled{% endif %}>Delete</button>
                 <button class="btn btn-primary pull-right" onclick="window.location.href='/dashboard/statuses/maintenance/{{ status.hashId }}'" {% if not status.editable %}disabled{% endif %}>Edit</button>
               </td>
             </tr>
             {% endfor %}
 
           </tbody>
-        </table> 
+        </table>
       </div>
     </div>
   </div>
