--- a/templates/dashboard/_header.html.twig
+++ b/templates/dashboard/_header.html.twig
@@ -9,8 +9,7 @@
     <div class="profile-menu">
       <h4>{{ app.user.fullName }}</h4>
       <a href="/dashboard/account">Account</a>
-      <a href="https://github.com/dustinscarberry/signal">Help</a>
-      <a href="/dashboard/about">About</a>
+      <a href="https://github.com/dustinscarberry/signal">Help / About</a>
       <span class="separator"></span>
       <a href="/dashboard/logout">Sign Out</a>
     </div>
@@ -18,7 +17,6 @@
   <div class="dashboard-quicklinks">
     <a class="quicklink fas fa-desktop" href="/"></a>
     <a class="quicklink fas fa-question" href="https://github.com/dustinscarberry/signal"></a>
-    <a class="quicklink fas fa-info-circle" href="/dashboard/about"></a>
     <span class="separator"></span>
   </div>
 </div>
