--- a/templates/mail/_footer.html.twig
+++ b/templates/mail/_footer.html.twig
@@ -3,7 +3,7 @@
     <td align="center" style="font-family: Helvetica, Arial; font-size: 11px; color:#706a7c">
       <br><br><br>
       You're receiving this email because you're a Signal subscriber.<br>
-      <a href="{{ siteUrl }}/subscription/{{ subscriber.hashId }}" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-weight: normal;text-decoration: underline;">Manage your subscription</a>.<br>
+      <a href="{{ config.siteUrl }}/subscription/{{ subscriber.hashId }}" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-weight: normal;text-decoration: underline;">Manage your subscription</a>.<br>
       <i>&copy; 2019 Signal</i><br><br>
     </td>
   </tr>
