--- a/templates/dashboard/login/login.html.twig
+++ b/templates/dashboard/login/login.html.twig
@@ -30,7 +30,7 @@
 
       </form>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {{ encore_entry_script_tags('dashboard') }}
   </body>
 </html>
